--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body> <!-- Inicio del cuerpo de la página -->
   <div class="container"> <!-- Contenedor principal centrado -->
-    <h1>💡 Generador de Citas Motivacionales</h1> <!-- Título principal -->
-    <p id="quote">Haz clic en el botón para inspirarte ✨</p> <!-- Párrafo donde aparecerán las citas -->
-    <button onclick="generarCita()">Nueva Cita</button> <!-- Botón que llama a la función "generarCita()" -->
+    <h1></h1>Generador de Antojitos Mexicanos</h1> <!-- Título principal -->
+    <p id="quote">Haz clic en el botón para aprender</p> <!-- Párrafo donde aparecerán las citas -->
+    <button onclick="generarDato()">Nuevo Dato</button> <!-- Botón que llama a la función "generarCita()" -->
   </div>
   <script src="script.js"></script> <!-- Enlaza el archivo JavaScript externo -->
 </body>
 </html>
+
