--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body> <!-- Inicio del cuerpo de la página -->
   <div class="container"> <!-- Contenedor principal centrado -->
     <h1></h1>Generador de Antojitos Mexicanos</h1> <!-- Título principal -->
-    <p id="quote">Haz clic en el botón para aprender</p> <!-- Párrafo donde aparecerán las citas -->
-    <button onclick="generarDato()">Nuevo Dato</button> <!-- Botón que llama a la función "generarCita()" -->
+    <p id="quote">Haz clic en el botón para aprender</p> <!-- Párrafo donde aparecerán los datos-->
+    <button onclick="generarDato()">Nuevo Dato</button> <!-- Botón que llama a la función "generarDato()" -->
   </div>
   <script src="script.js"></script> <!-- Enlaza el archivo JavaScript externo -->
 </body>
 </html>
+
 
