--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"> <!-- Define la codificación de caracteres como UTF-8 (soporta tildes y ñ) -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ajusta la vista para que sea responsive en móviles -->
-  <title>Citas Motivacionales</title> <!-- Título de la pestaña del navegador -->
+  <title>Antojitos Mexicanos</title> <!-- Título de la pestaña del navegador -->
   <link rel="stylesheet" href="style.css"> <!-- Enlaza la hoja de estilos CSS externa -->
 </head>
 <body> <!-- Inicio del cuerpo de la página -->
@@ -15,5 +15,6 @@
   <script src="script.js"></script> <!-- Enlaza el archivo JavaScript externo -->
 </body>
 </html>
+
 
 
